@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.8-Beta 1
   FEATURES:
+   * Ctrl+C copies the currently playing artist & title to the clipboard. (BR 228872)
+   * Patch by fleissig fleissig <fleissig@yandex.ru>.
    * Volume fade-out is now also available for pause.
    * The Files browser now has a Refresh button. (BR 213666)
    * The active playlist item is animated with a soft glow effect.
